Optimize runtime Docker image